[package]
name = "semantic-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
rust-bert = "0.19.0"
anyhow = "1.0.66"
kd-tree = "0.4.2"
typenum = "1.15.0"
